--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <footer class="footer">
         <div class="contanier">
             <a class="link" href="./index.html"><span class="logo-first">Web</span><span class="footer-logo-last">Studio</span></a>
-            <address>
+            <address class="address">
                 <ul class="footer-nav-list list">
                     <li class="footer-list-link">
                         <a class="footer-address link" href="http://goo.gl/maps/QTR2mPzjSUtPzngC9" target="_blank"
