--- a/portfolio.html
+++ b/portfolio.html
@@ -20,12 +20,12 @@
                 <nav class="header-nav">
                     <ul class="header-nav-lsit list">
                         <li class="header-nav-item">
-                            <a href="./index.html" class="header-link link active-page">
+                            <a href="./index.html" class="header-link link">
                                 Студія
                             </a>
                         </li>
                         <li class="header-nav-item">
-                            <a href="./portfolio.html" class="header-link link">
+                            <a href="./portfolio.html" class="header-link active-page link">
                                 Портфоліо
                             </a>
                         </li>
@@ -137,7 +137,7 @@
         <div class="contanier">
             <a class="link" href="./index.html"><span class="logo-first">Web</span><span
                     class="footer-logo-last">Studio</span></a>
-            <address>
+            <address class="address">
                 <ul class="footer-nav-list list">
                     <li class="footer-list-link">
                         <a class="footer-address link" href="http://goo.gl/maps/QTR2mPzjSUtPzngC9" target="_blank"
